updated home page, added about/contact pages, changes to styling

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
     <head>
-        <title>Home | Otzaf</title>
+        <title>About | Otzaf</title>
 
         <meta charset="utf-8">
         <meta name="description" content="otzaf is a Brighton based software house">
@@ -24,7 +24,7 @@
                     <div class="links">
                         <li><a href="/">Home</a></li>    
                         <li><a href="https://github.com/otzaf">Source Code</a></li>
-                        <li><a href="/about.html">About</a></li>    
+                        <li><a href="/about.html">About</a></li>        
                     </div>
                 </ul>
             </nav>
@@ -32,41 +32,37 @@
 
         <main>
             <article>
-                <h1>Hello, World!</h1>
-                <p class="mission">
-                    Otzaf is <strong>privacy</strong> first. This is reflected in our software and our revenue model.
-                    <br/> Our mission is to provide software for the people, not for profit.
-                    <em>Most</em> of our software is open source to give back to the community.
+                <h1>Otzaf</h1>
+                <p>
+                    Otzaf is a software house based in Brighton, UK. 
                 </p>
             </article>
 
             <hr/>
 
             <article>
-                <h2>Where we're headed</h2>
+                <h2>Vision</h2>
                 <p>
-                    Our primary revenue stream will be from a variety of alternative paid-for software solutions. Our current
-                    project being <a href='https://hugobrains.ai'>Hugo Brains</a>, an AI-powered financial assistant.
+                    We want to provide a suite of polished open-source
+                    software(-as-a-service) solutions.
                 </p>
                 <p>
-                    Particular problems we're interested in tackling are: data storage, email, text editors, web browsers, search engines,
-                    and more. We want to provide a service that is worth paying for, where you aren't the product.
+                    Our current plan: create open source software can be downloaded and installed by <em>anyone</em>
+                    locally on their machines, with an option to use our hosted service for a small monthly-recurring cost &mdash;
+                    this helps us keep the lights on.   
                 </p>
             </article>
 
             <hr/>
 
-            <artice>
-                <h4>Contributing</h4>
+            <article>
+                <h2>Transparency</h2>
                 <p>
-                    This website itself is open source. Requests for change can be made
-                    on the <a href='https://github.com/otzaf/otzaf.org'>GitHub</a> page.
+                    Most of our work is done in the public eye, and
+                    can be contributed to by anyone. Our roadmap is publicly available <a href=''>here</a>.
                 </p>
-                <p>
-                    All of the open source projects we have are published on GitHub &mdash; any contributions
-                    are welcome.
-                </p>
-            </artice>
+            </article>
+
         </main>
 
         <footer>
