--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
     <head>
-        <title>Home | Otzaf</title>
+        <title>Contact | Otzaf</title>
 
         <meta charset="utf-8">
         <meta name="description" content="otzaf is a Brighton based software house">
@@ -24,7 +24,7 @@
                     <div class="links">
                         <li><a href="/">Home</a></li>    
                         <li><a href="https://github.com/otzaf">Source Code</a></li>
-                        <li><a href="/about.html">About</a></li>    
+                        <li><a href="/about.html">About</a></li>        
                     </div>
                 </ul>
             </nav>
@@ -32,41 +32,12 @@
 
         <main>
             <article>
-                <h1>Hello, World!</h1>
-                <p class="mission">
-                    Otzaf is <strong>privacy</strong> first. This is reflected in our software and our revenue model.
-                    <br/> Our mission is to provide software for the people, not for profit.
-                    <em>Most</em> of our software is open source to give back to the community.
+                <h1>Contact Us</h1>
+                <p>
+                    If you want to get hold of us, send an email to queries@hugobrains.com. Any bug reports can be
+                    made to their relevant projects on our <a href='https://github.com/otzaf'>GitHub organisation</a>.
                 </p>
             </article>
-
-            <hr/>
-
-            <article>
-                <h2>Where we're headed</h2>
-                <p>
-                    Our primary revenue stream will be from a variety of alternative paid-for software solutions. Our current
-                    project being <a href='https://hugobrains.ai'>Hugo Brains</a>, an AI-powered financial assistant.
-                </p>
-                <p>
-                    Particular problems we're interested in tackling are: data storage, email, text editors, web browsers, search engines,
-                    and more. We want to provide a service that is worth paying for, where you aren't the product.
-                </p>
-            </article>
-
-            <hr/>
-
-            <artice>
-                <h4>Contributing</h4>
-                <p>
-                    This website itself is open source. Requests for change can be made
-                    on the <a href='https://github.com/otzaf/otzaf.org'>GitHub</a> page.
-                </p>
-                <p>
-                    All of the open source projects we have are published on GitHub &mdash; any contributions
-                    are welcome.
-                </p>
-            </artice>
         </main>
 
         <footer>
