fixed a grammatical error

--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
                     software(-as-a-service) solutions.
                 </p>
                 <p>
-                    Our current plan: create open source software can be downloaded and installed by <em>anyone</em>
+                    Our current plan: create open source software that can be downloaded and installed by <em>anyone</em>
                     locally on their machines, with an option to use our hosted service for a small monthly-recurring cost &mdash;
                     this helps us keep the lights on.   
                 </p>
