--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
             <article>
                 <h2>Where we're headed</h2>
                 <p>
-                    Our primary revenue stream will be from a variety of alternative paid-for software solutions. Our current
-                    project being <a href='https://hugobrains.ai'>Hugo Brains</a>, an AI-powered financial assistant.
+                    Our primary revenue stream will be from a variety of alternative paid-for software solutions.
                 </p>
                 <p>
                     Particular problems we're interested in tackling are: data storage, email, text editors, web browsers, search engines,
